--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
     "sample",
     "example"
   ],
-  "website": "http://github.com/xuiv/v2ray-heroku",
-  "repository": "http://github.com/xuiv/v2ray-heroku"
+  "website": "http://github.com/luanwillianzh/v2ray-heroku",
+  "repository": "http://github.com/luanwillianzh/v2ray-heroku"
 }
